<resources>
    <string name="app_name">Ya Tha Sone</string>

    <string name="app_name_myan">ရသစံု</string>
    <string name="action_settings">Settings</string>



    <string name="content_authority">net.sandi.luyeechon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- string for health -->
    <string name="health_list_detail_name">health_list_detail_name</string>
    <string name="health_des">နာက်င္ျခင္းေတြအတြက္ သံပုရာခြံ
ေလးဖက္နာ၊ အရိုးအဆစ္ ေရာင္ရမ္းနာ၊ ဒူလာ ေခၚ ေဂါက္ေရာဂါ၊ အရြတ္အေၾကာနာ စတဲ့ ေ၀ဒနာေတြကို ခံစားရလို႔ ေနရထိုင္ရ ကသိကေအာက္ ျဖစ္ရသူေတြအတြက္ သက္သာေစမယ့္ သတင္းေကာင္းတစ္ခုကေတာ့ သံပုရာခြံ ရွိဖို႔ပဲ လိုပါတယ္။
သံပုရာ ဆိုတာ ဗစ္တာမင္ စီ ၾကြယ္၀တဲ့ပစၥည္းျဖစ္ၿပီး ေန႔စဥ္ ခႏၶာကိယ္အတြက္ ဗစ္တာမင္စီ လိုအပ္ခ်က္က ၃၁ ရာခိုင္ႏႈန္း ရွိပါတယ္။ ဗီတာမင္စီရဲ႕ ဂုဏ္သတၱိေတြက ေျပာမဆံုးေအာင္ မ်ားလွသလို သံပုရာသီး၊ သံပုရာခြံရဲ႕ ေဆးဖက္၀င္အစြမ္းေတြကလဲ သံုးမကုန္ေအာင္ က်ယ္ျပန္႔လွပါတယ္။ အဲ့ဒီထဲကမွ အရိုးအဆစ္ နာက်င္မႈေတြကို သံပုရာခြံက သက္သာေအာင္ ထိေရာက္ စြမ္းေဆာင္ေပးႏိုင္ပံုကို ေစာႏြဲ ့ေနဆိုင္-ပူတာအို ေပ့ခ်္ကေန မွ်ေ၀တင္ျပလိုက္ပါတယ္။
လိုအပ္တဲ့ပစၥည္းေတြကေတာ့ သံပုရာသီး ၄ လံုးနဲ႔ Olive Oil လို့ေခၚတဲ့ သံလြင္ဆီတို႔ပါပဲ။ တျခားပစၥည္းေတြကေတာ့ ပလတ္စတစ္အိတ္၊ ဖန္ဘူး သို႔မဟုတ္ ဖန္ပုလင္းတလံုး၊ ေဂါ့ဇ္စ ေခၚ ပတ္တီးအက်ဲစ၊ သိုးေမြးတဘက္ တို႔ပါပဲ။
ေဆးကိုျပင္ဆင္ရမယ့္နည္းလမ္းကေတာ့ သံပုရာခြံေတြကို ဖန္ဘူးထဲထည့္ၿပီး သံလြင္ဆီကို ဖန္ဘူးထိပ္အထိ ထည့္ေပးရပါမယ္။ ၿပီးရင္ေတာ့ ဖန္ဘူးကို ပိတ္ၿပီး ၂ ပတ္ေလာက္ ထားရမွာပါ။ အဲလိုထားၿပီးရင္ ေဆးအဆီ ရလာပါၿပီ။
အဲဒီေဆးအဆီကို ပတ္တီးစမွာ စိမ္ ဆြတ္လိုက္ၿပီး နာတဲ့ အရိုး၊ အဆစ္ေပၚမွာ လိမ္းပါ။ အဲဒီ ေဆးစိုေနတဲ့ ပတ္တီးစကိုပါ နာတဲ့ေနရာေပၚမွာ တင္ထားလိုက္ၿပီး ပတ္တီးစေပၚကေန ပလတ္စတစ္အိတ္ ထပ္ပတ္လိုက္ပါ။ ၿပီးရင္ အဲ့ဒီအေပၚကမွ သိုးေမြးတဘက္ ထပ္ပတ္ေပးရမွာပါ။ နည္းကေတာ့ အဲဒါပါပဲ။ လြယ္ပါတယ္ေနာ္။ အဲလိုလုပ္ေပးရင္ ညဖက္လုပ္ မနက္ဆို ေပ်ာက္ေရာ ဆိုပဲ။ ႏွစ္ရွည္ခံစားရသူေတြကေတာ့ ခ်က္ခ်င္း မေပ်ာက္ေတာင္ သက္သာသြားမွာေတာ့ အေသအခ်ာပါပဲ။
တခ်ိဳ႕ကေတာ့ ေဆးဖက္၀င္ အစြမ္းစံုတဲ့ သံပုရာခြံကို ေဆးျဖစ္၀ါးျဖစ္ေရာ ႀကိဳက္ႏွစ္သက္လို႔ေရာ စားတတ္ၾကပါေသးတယ္။
သံပုရာခြံဟာ ဗစ္တာမင္စီ ျပည့္၀လြန္းတာေၾကာင့္ တုပ္ေကြး၊ လည္ေခ်ာင္းနာ၊ သာမန္ အေအးမိတာမ်ိဳးလို ကူးစက္ေရာဂါေတြကို ကာကြယ္ေပးႏိုင္ၿပီး ၀မ္းပံုမွန္ သြားေစတဲ့ ဖိုက္ဘာဓာတ္ကိုလဲ လႈံ႕ေဆာ္ေပးႏိုင္ပါတယ္။
သံပုရာခြံမွာပါတဲ့ ပိုလီဖွီေနာ ဖွေလဗာႏြိဳက္ ဆိုတဲ့ဓာတ္က ကိုလက္ စထေရာကို ေလွ်ာ့ခ်ေပးၿပီး ေသြးဖိအားပမာဏကို ထိန္းသိမ္းေပးႏိုင္တဲ့ ပိုတက္စီယမ္လဲ ပါ၀င္ပါတယ္။
ဒါ့အျပင္ ခႏၶာကိုယ္ကေန ကာဘိုဟိုက္ဒရိတ္ ပိုလွ်ံပမာဏကို စုပ္ယူျခင္းကေန တားဆီးေပးႏိုင္တဲ့ ပက္တင္ ဆိုတဲ့ ဓာတ္လဲ ပါ၀င္တာေၾကာင့္ ကိုယ္အေလးခ်ိန္ ေလွ်ာ့ခ်ရာမွာ အေထာက္အကူ ျပဳေနျပန္ပါေရာ။ ဒါေၾကာင့္ ပ်ားသံပုရာ ဆိုၿပီး အခံြပါ ထည့္ရတာ ျဖစ္ပါလိမ့္မယ္။
သံပုရာခြံမွာပါတဲ့ ခရစ္တစ္အက္ဆစ္နဲ႔ ဗစ္တာမင္စီေၾကာင့္ အေရျပားေပၚက အမည္းစက္ေတြနဲ႔ အိုမင္းရွံဳ႕တြမႈကိုျဖစ္ေစတဲ့ ဖရီးရက္ဒီကယ္ေတြကို တားဆီးရာမွာ အလြန္အမင္းကို အစြမ္းထက္ ထိေရာက္လွတာေၾကာင့္ အေရျပားရဲ႕ အရည္အေသြးကို ထိန္းသိမ္းေပးႏိုင္ပါတယ္။
ကဲ- က်န္းမာေရးနဲ႔အလွအပအတြက္ သံပုရာသီးေရာ သံပုရာခြံပါ လိမ္းရာ၊ စားသံုးရာမွာ ပံုစံအမ်ိဳးမ်ိဳးနဲ႔ အစြမ္းထက္တယ္ ဆိုတာ အခုသိသြားၿပီဆိုမွေတာ့ ေနာက္က်တယ္ဆိုတာ မရွိေတာ့ပါဘူးေလ။
ေစာႏြဲ႔ေနဆိုင္(ပူတာအို)
ကိုးကား - Healthy Food House
အစြမ္းထက္ သဘာ၀ေဆးနည္းမ်ား</string>

    <string name="health_title">သံပုရာခြံ</string>
    <string-array name="health_array">
        <item>ေရာဂါပိုးမြွားမ်ားအေျကာင္း</item>
        <item>ေဆးဖက္၀င္သီးနွံမ်ားအေျကာင္း</item>
        <item>နာတာရွည္ေရာဂါနွင့္ေဝဒနာမ်ားအေျကာင္း</item>
    </string-array>



    <string name="txt_references">References</string>

    <!--string for quiz-->
    <string name="et_hint">Enter your answer</string>
    <string name="btn_show_ans">Show Answer</string>
    <string name="btn_done">Confirm</string>
    <string name="btn_show">Show Answer</string>
    <string name="btn_next">Next</string>
    <string name="txt_ans">Answer :</string>
    <string name="txt_true">Your answer is true</string>
    <string name="txt_false">Your answer is false</string>


    <!-- string for motivator-->
    <string name="menu_motivator">စိတ္ခြန္အားစာတိုမ်ား</string>
    <string name="motivator_title">Motivational Quotes</string>



    <!-- string for jokes-->
    <string name="joke_list_detail_name">joke_list_detail_name</string>
    <string name="joke_des">"မန္ယူဖန္ေတြကို အိမ္ေထာင္ဖက္အျဖစ္ေရြးခ်ယ္သင့္ေသာ အေၾကာင္းရင္း ၅ ခ်က္"
မိန္းခေလးေတြအေနနဲ႔ အိမ္ေထာင္ျပဳေတာ့မယ္ဆိုရင္ မန္ယူဖန္ေတြကို ဦးစားေပးေရြးခ်ယ္သင့္ပါတယ္။ ဘာေၾကာင့္လဲဆိုေတာ့ -
၁။ မန္ဖန္ေတြ အေနနဲ႔ မန္ယူအသင္း ဘယ္ေလာက္ ကစားပံုညံ့ေန ညံ့ေန အသင္းႏိုင္ဖို႔က အဓိကပဲဆိုတဲ့ စိတ္နဲ႔ အားေပးၾကသလိုမ်ိဳး သူတို႔မိန္းမေတြ ခ်က္ျပဳတ္ေကြၽးေမြးတဲ့ ထမင္းဟင္း ဘယ္ေလာက္ညံ့ေန ညံ့ေန ညစာမငတ္ဖို႔က အဓိကပဲဆိုတဲ့ စိတ္နဲ႔ အားေပးၾကမယ္ဆိုတာ ေသခ်ာလို႔ပါ။
၂။ မန္ဖန္ေတြအေနနဲ႔ အသင္းရဲ႕ ပ်င္းရိ ၿငီးေငြ႔ဖြယ္ရာ ေကာင္းတဲ့ ကစားကြက္ေတြကို အျမဲတမ္းျမင္ေတြ႕ေနၾကဆိုေတာ့ သူတို႔ရဲ႕ မိန္းမေတြရဲ႕ ပ်င္းရိၿငီးေငြ႔ဖြယ္ရာ စကားမ်ားျခင္းအတြက္ ေကာင္းစြာ ခံႏိုင္ရည္႐ွိေနမွာ ေသခ်ာလို႔ပါ။
၃။ မန္ဖန္ေတြအေနနဲ႔ အသင္းနဲ႔အံမဝင္တဲ့ ကစားသမားေတြအတြက္ အသင္းက ေငြေၾကးေတြ အမ်ားအျပား သံုးစြဲတာကို အျပစ္မျမင္သလို သူတို႔မိန္းမေတြအေနနဲ႔ ခဏ ခဏ ေ႐ွာ့ပင္းထြက္ၿပီး သုံးျဖဳန္းေနရင္ေတာင္ ဘယ္ေတာ့မွ ျငဴစူမွာမဟုတ္တာ ေသခ်ာလို႔ပါ။
၄။ မန္ဖန္ေတြအေနနဲ႔ မန္ယူအသင္းရဲ႕ လက္႐ွိအေျခအေနက ဘယ္ေလာက္ဆိုးဝါးေနေန အရင္တုန္းက ဘယ္လိုသမိုင္းေၾကာင္းေကာင္းခဲ့တာကြဆိုၿပီး ၾကံဖန္ဂုဏ္ယူၾကသလို သူတို႔ရဲ႕ မိန္းမ အခုလက္႐ွိမွာ ဘယ္ေလာက္ဝၿပီး ပံုပ်က္ပန္းပ်က္ျဖစ္ေနပါေစ အပ်ိဳတုန္းက ဘယ္လိုေခ်ာခဲ့တာကြဆိုၿပီး ၾကံဖန္အခ်စ္ပိုၾကမွာ ေသခ်ာလို႔ပါ။
၅။ မန္ဖန္ေတြအေနနဲ႔ မန္ယူအသင္းက သူတို႔ကို ဘယ္ေလာက္ပဲ နာက်င္ေၾကကြဲရေအာင္ အႀကိမ္ႀကိမ္ႏွိပ္စက္ေသာ္လည္း အသင္းအေပၚသစၥာမပ်က္ပဲ အျမဲခ်စ္ၾကသလို သူတို႔ရဲ႕မိန္းမေတြက သူတို႔ကို ဘယ္ေလာက္ပဲ ဒဏ္ရာေတြေပးပါေစ အခ်စ္မပ်က္ပဲ တစ္သက္လံုးခ်စ္ေနမွာ ေသခ်ာလို႔ပါ။
ကဲ ဒါေၾကာင့္မို႔ မိန္းခေလးမ်ား အိမ္ေထာင္ဖက္ေရြးခ်ယ္ေတာ့မယ္ဆိုရင္ မန္ယူဖန္ေတြကို ရဲရဲႀကီး ေရြးခ်ယ္သင့္ေၾကာင္း အၾကံေပးလိုက္ပရေစ။</string>
    <string name="joke_title">မန္ယူဖန္ေတြကို အိမ္ေထာင္ဖက္အျဖစ္ေရြးခ်ယ္သင့္ေသာ အေၾကာင္းရင္း ၅ ခ်က္</string>
    <string name="joke_des2">ေဖ့စ္ဘုတ္ေပၚက ႐ႈခင္းဓာတ္ပံုေလးက သိပ္လွတာပဲတဲ့
ၾကည့္မဝလို႔ like ၿပီး share ထားလိုက္တယ္
ေခါင္းရင္းတံခါးေပါက္ကို ဖြင့္မၾကည့္မွေတာ့
အရမ္းလွပေနတဲ့ လမင္းႀကီးကို
ညီမေလး ဘယ္ျမင္ရပါ့ မလည္း....။
အေမခ်က္ၿပီးသားဟင္းကို အခန္႔သားစားတယ္
အေမ့အိမ္မႈကိစၥေတြလည္း ညီမေလးမကူခဲ့ဘူး
အိမ္ေထာင္ရက္သားက်တဲ့အခါမွာေတာ့
ေဖ့စ္ဘုတ္ေပၚက ဟင္းခ်က္နည္းေတြ႐ွာၿပီး
ဒုကၡနဲ႔ လွလွ ေတြ႕ၾကလိမ့္မယ္ ....။
ညီမေလးက စာမဖတ္ဘူး
စာေရးဆရာေတြကိုလည္း မသိဘူး
ေဖ့စ္ဘုတ္ေပၚက တစ္ရာဖိုးသံုးပုဒ္တန္ေတြကိုေတာ့
သူသိပ္သေဘာက်တာပဲတဲ့ ....။
သတင္းစာမဖတ္ဘူး ဗဟုသုတ မ႐ွိဘူး
ေဖ့ဘုတ္စ္ေပၚက လူတကာဖြတဲ့ သတင္းအမွားဆိုု
သူထိပ္ဆံုးက share တယ္....။
အိမ္ေထာင္ေရးေဖာက္ျပန္တဲ့ ကိုရီးယားကားေတြဆို
သူသိပ္စြဲလမ္းတာတဲ့...
အဆိုေတာ္ဆိုလည္း ႐ုပ္ေခ်ာမွ အိုပါး တဲ့..
သူနားမလည္တဲ့ ကိုရီးယားသီခ်င္းေတြက သူ႔အသည္းစြဲ...။
နည္းပညာေခတ္မွာ ဆို႐ွယ္နက္ေဝါ့ခ္ ေတြၾကား
ေယာင္ဝါးဝါးနဲ႔ စီးေမ်ာေနတဲ့
သနားစရာညီမေလးေတြ
ကြၽန္ေတာ့္ပတ္ဝန္းက်င္မွာ တကယ္အမ်ားႀကီးပါပဲ....။
ကဲ... ေျပာရင္းဆိုရင္း
ဒီပုိ႔စ္ကို မဖတ္ပဲ သူ like သြားျပန္ၿပီ ...။</string>
    <string name="joke_title2">ကိုရီးယားသီခ်င္းေတြက သူ႔အသည္းစြဲ...</string>
    <string name="btn_skip">skip</string>
    <string name="menu_short_jokes">ဟာသတိုမ်ား</string>
    <string name="menu_health_topics">က်န္းမာေရးေဆာင္းပါးမ်ား</string>
    <string name="action_share">Share</string>

    <string name="quiz">Happy Quiz</string>
    <string name="txt_quiz_start">Please wait while loading</string>
    <string name="menu_fav_joke">Favourite Jokes</string>
    <string name="menu_fav_health">Favourite Health Topics</string>
    <string name="lbl_share_the_health">Share</string>
    <string name="lbl_share_the_joke">Share</string>


</resources>
